Update with retrieving user info from MP
